--- a/web/web/Web.config
+++ b/web/web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-web-20170927024735.mdf;Initial Catalog=aspnet-web-20170927024735;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Blogdb" connectionString="data source=DESKTOP-DDBC4M9;initial catalog=blogdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
