--- a/web/web/web.csproj
+++ b/web/web/web.csproj
@@ -218,6 +218,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Class1.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\blogdb.cs" />
@@ -306,6 +307,10 @@
     <Content Include="Views\News\Details.cshtml" />
     <Content Include="Views\News\Edit.cshtml" />
     <Content Include="Views\News\Index.cshtml" />
+    <Content Include="Views\Themes\View.cshtml" />
+    <Content Include="Views\Themes\Read.cshtml" />
+    <Content Include="Views\Home\Admin.cshtml" />
+    <Content Include="Views\News\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
